Quorum3/Library/Tests/TypeChecker/Pass/ImpAssignObjectNumObj.quorum
class Main
    action Main
        Number v
        v:SetValue(5.0)
        Test(v)
    end

    action Test(Object var)
        Number value = cast(Number, var)
        if value:GetValue() = 5.0
            output "passed"
        end
    end
end
