Quorum3/Library/Tests/TypeChecker/Fail/ExpAssignIntObjNumObj.quorum
class Main
    action Main
        Number n
        Integer int
        n:SetValue(7.5)
        int = cast(Integer, n)
    end
end